Basic ActiveMQ version.